# sailing4

./: .gitignore  CMakeLists.txt  README.md  sailing.pro  sailing4.geany
Context/: Context.cpp  Context.hpp  NextQuestionResult.hpp
Defines/: MarkerPointer.hpp  MultiChoiceQuestionPointer.hpp  MultiChoiceSolutionPointer.hpp  NormalQuestionPointer.hpp  OneChoiceQuestionPointer.hpp  OneChoiceSolutionPointer.hpp  ParserPointer.hpp  QuestionListPointer.hpp  QuestionPointer.hpp  SeekerPointer.hpp  SetOfInts.hpp  SolutionListPointer.hpp  SolutionPointer.hpp  SolvedTestPointer.hpp  StringListPointer.hpp  StringPointer.hpp  TestListPointer.hpp  TestPointer.hpp  TestSuitePointer.hpp  TokenPointer.hpp
MainWindow/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  TestButton.cpp  TestButton.hpp
Mark/: Mark.cpp  Mark.hpp  PartialMark.cpp  PartialMark.hpp
Marker/: BinaryMarker.cpp  BinaryMarker.hpp  Marker.cpp  Marker.hpp
Parser/: JsonParser.cpp  JsonParser.hpp  Parser.cpp  Parser.hpp
Question/: MultiChoiceQuestion.cpp  MultiChoiceQuestion.hpp  NormalQuestion.cpp  NormalQuestion.hpp  OneChoiceQuestion.cpp  OneChoiceQuestion.hpp  Question.cpp  Question.hpp  QuestionList.cpp  QuestionList.hpp
QuestionWidget/: MultiChoiceQuestionWidget.cpp  MultiChoiceQuestionWidget.hpp  NormalQuestionWidget.cpp  NormalQuestionWidget.hpp  OneChoiceQuestionWidget.cpp  OneChoiceQuestionWidget.hpp  QuestionWidget.cpp  QuestionWidget.hpp  QuestionWidget.ui
Seeker/: CurrentDirSeeker.cpp  CurrentDirSeeker.hpp  Seeker.cpp  Seeker.hpp
Solution/: MultiChoiceSolution.cpp  MultiChoiceSolution.hpp  OneChoiceSolution.cpp  OneChoiceSolution.hpp  Solution.cpp  Solution.hpp  SolutionList.cpp  SolutionList.hpp
SolvedTest/: SolvedTest.cpp  SolvedTest.hpp
StringList/: StringList.cpp  StringList.hpp
Test/: Test.cpp  Test.hpp  TestList.cpp  TestList.hpp
TestFormat/: TestFormat.hpp
TestSuite/: TestSuite.cpp  TestSuite.hpp
TestWidget/: TestWidget.cpp  TestWidget.hpp  TestWidget.ui
Token/: EndToken.cpp  EndToken.hpp  FailToken.cpp  FailToken.hpp  QuestionToken.cpp  QuestionToken.hpp  Token.cpp  Token.hpp
main/: fetchTests.cpp  fetchTests.hpp  main.cpp  markTest.cpp  markTest.hpp
